# gen-ai-token-encoder-decoder

./: .env.sample  README.md  main.py  pyproject.toml
AI/: contants.py
gemini_chat/: agent.py  cot.py  persona.py
openai_chat/: agent.py  cot.py  persona.py
tokenizer/: TextTokenizer.py  constants.py  utils.py  vocab.json
