[project]
name = "genaicohort"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-genai>=1.10.0",
    "google-generativeai>=0.8.4",
    "openai>=1.73.0",
    "requests>=2.32.3",
]
